triggers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git-tekton-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tekton.internal.jpace121.net
    http:
      paths:
      - path: /test-events/
        pathType: Prefix
        backend:
          service:
            name: el-test-listener
            port:
              number: 8080
